# weird-JEPA

./: .gitignore  README.md  eval.py  ideating.md  jepa.py  module.py  pyproject.toml  train.py  utils.py  visualize_models.py
config/train/: lewm.yaml
config/train/model/: gru_predictor.yaml  lewm.yaml  mobilenet_encoder.yaml
data/: __init__.py
data/collection/: collect_kitchen.py
data/datasets/: __init__.py  kitchen.py  kitchen_teleop.py
datasets/: README.md
model/: __init__.py  module.py  utils.py  visualize_models.py
